# databasers-utils

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
colab-scripts/: create_mult_raw_data_source.py  create_yaml_file.py
misc/colab-scripts/: client_graphql.py  query_utils.py  utils.py
misc/notebooks/: updates_null.ipynb
scripts/: lint.py
src/databasers_utils/: __init__.py  constants.py  copy_models_from_dev_to_prod.py  create_yaml_file.py  get_architecture_table_from_api.py  link_directory_metadata.py  table_arch.py  table_architecture.py  update_dbt_project.py  upload_columns.py  utils.py
tests/: test_read_architecture_table.py  test_table_arch.py  test_table_architecture.py
tests/models/br_ibge_pib/: br_ibge_pib__gini.sql  br_ibge_pib__uf.sql  schema.yml
tests/queries-basedosdados/: dbt_project.yml
tests/queries-basedosdados-dev/: dbt_project.yml  test_copy_models_from_dev_to_prod.py  test_get_architecture_table_from_api.py  test_table_architecture.py
tests/queries-basedosdados-dev/models/br_ibge_pib/: br_ibge_pib__gini.sql  br_ibge_pib__uf.sql
tests/queries-basedosdados/models/br_ibge_pib/: br_ibge_pib__gini.sql  br_ibge_pib__uf.sql  schema.yml
